cleanup model package